--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "@sscharfenberg/progressbar",
-  "version": "0.1.2",
-  "type": "module",
-  "description": "Simple, accessible progressbar to visualize request status",
-  "homepage": "https://github.com/sscharfenberg/progressbar",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sscharfenberg/progressbar.git"
-  },
-  "browser": "progressbar.js",
-  "scripts": {
-    "build": "rollup -c",
-    "prettier": "prettier --write \"**/*.{js,vue,scss}\""
-  },
-  "keywords": [
-    "progress",
-    "progressbar"
-  ],
-  "author": {
-    "name": "Sven Scharfenberg",
-    "email": "sscharfenberg@ivugmbh.de",
-    "url": "https://github.com/sscharfenberg"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "prettier": "^3.5.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "rollup": "^2.79.2",
-    "rollup-plugin-terser": "^7.0.2"
-  },
-  "engines": {
-    "node": "^22.14.0",
-    "npm": "^10.9.2"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": false,
-    "singleAttributePerLine": false,
-    "plugins": [
-      "prettier-plugin-organize-imports"
+    "name": "@sscharfenberg/progressbar",
+    "version": "0.1.3",
+    "type": "module",
+    "description": "Simple, accessible progressbar to visualize request status",
+    "homepage": "https://github.com/sscharfenberg/progressbar",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sscharfenberg/progressbar.git"
+    },
+    "browser": "progressbar.js",
+    "scripts": {
+        "build": "rollup -c",
+        "prettier": "prettier --write \"**/*.{js,vue,scss}\""
+    },
+    "keywords": [
+        "progress",
+        "progressbar"
     ],
-    "trailingComma": "none",
-    "bracketSpacing": true,
-    "arrowParens": "avoid",
-    "overrides": [
-      {
-        "files": "**/*.yml",
-        "options": {
-          "tabWidth": 2
-        }
-      }
-    ]
-  }
+    "author": {
+        "name": "Sven Scharfenberg",
+        "email": "sscharfenberg@ivugmbh.de",
+        "url": "https://github.com/sscharfenberg"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "prettier": "^3.5.3",
+        "prettier-plugin-organize-imports": "^4.1.0",
+        "rollup": "^2.79.2",
+        "rollup-plugin-terser": "^7.0.2"
+    },
+    "engines": {
+        "node": ">=22",
+        "npm": ">=10.9"
+    },
+    "prettier": {
+        "printWidth": 120,
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": false,
+        "singleAttributePerLine": false,
+        "plugins": [
+            "prettier-plugin-organize-imports"
+        ],
+        "trailingComma": "none",
+        "bracketSpacing": true,
+        "arrowParens": "avoid",
+        "overrides": [
+            {
+                "files": "**/*.yml",
+                "options": {
+                    "tabWidth": 2
+                }
+            }
+        ]
+    }
 }
